public/style.css
/* ... */
/* ---------------------------------------------------
Variables
-----------------------------------------------------*/

:root {
	--duration: .25s;
	--base-unit: 16px;
    --sans-font-family: 'Roboto',sans-serif;

	--yellow:     #FFD445;
	--midnight:   #1E2E3F;
	--concrete:   #95a5a6;
	--blue:       #0074E8;

	--chili:       #e74c3c;
	--emerald:     #2ecc71;

	--specter-100: #F4F7F9;
	--specter-300: #E6EDF2;
	--specter-500: #DBE5EC;

	--shadow: 0 1px 2px rgba(0,0,0,0.05), 
	0 2px 4px rgba(0,0,0,0.05), 
	0 4px 8px rgba(0,0,0,0.05), 
	0 8px 16px rgba(0,0,0,0.05),
	0 16px 32px rgba(0,0,0,0.05), 
	0 32px 64px rgba(0,0,0,0.05);

	--shadow-long: 0 2px 1px rgba(0,0,0,0.03), 
	0 4px 2px rgba(0,0,0,0.03), 
	0 8px 4px rgba(0,0,0,0.03), 
	0 16px 8px rgba(0,0,0,0.03),
	0 32px 16px rgba(0,0,0,0.03);
}

/* ---------------------------------------------------
General
-----------------------------------------------------*/

::-moz-selection {
	color: var(--midnight);
	background: var(--light-gold);
}

::selection {
	color: var(--midnight);
	background: var(--yellow);
}

html {
	box-sizing: border-box;
}

*,
*:before,
*:after {
	box-sizing: inherit;
}

*,
*:after,
*:before {
	transition-timing-function: cubic-bezier(0.69, 0, 0, 1);
	animation-timing-function: cubic-bezier(0.69, 0, 0, 1);
}

html {
	font-size: 62.5%;
	font-weight: 400;
	-webkit-font-smoothing: antialiased;
	-webkit-text-size-adjust: 100%;
	-ms-text-size-adjust: 100%;
	scroll-behavior: smooth;

	@media (prefers-reduced-motion: reduce) {
		html {
			scroll-behavior: auto;
		}
	}
}

body {
	position: relative;
	font-family: 'Roboto', sans-serif;
	font-size: 1.6rem;
	color: var(--dark-gray);
	line-height: normal;
	min-width: 380px;
	background: var(--specter-100);
}

a {
	color: var(--emerald);
}

/* ---------------------------------------------------
::Typography
-----------------------------------------------------*/

h1,
h2,
h3 {
	font-family: var(--serif-font-family);
	line-height: 1.2;
	font-weight: 400;
	padding: 0;
	margin: 0;
}

h1 {
	font-size: 3.2rem;
}

h2 {
	font-size: 2.4rem;
}

h3 {
	font-size: 1.8rem;
}

small {
	font-size: 1.4rem;
}

/* ---------------------------------------------------
::Layout (Nav, Header, Main, Footer)
-----------------------------------------------------*/

nav {
	position: absolute;
	top: 0;
	width: 100%;
	padding: var(--base-unit);
	z-index: 1000;
	display: flex;
	justify-content: space-between;
}

nav a {
	text-align: center;
	max-width: 180px;
	padding: 8px 16px;
	color: #fff;
	text-decoration: none;
	background: var(--emerald);
	border-radius: 32px;
	box-shadow: var(--shadow);
}

nav .social-links {
	display: inline-flex;
	align-items: center;
}

nav .social-links .fb_iframe_widget,
nav .social-links #twitter-widget-0 {
	margin: 0 calc(var(--base-unit)/4);
}

header {
	text-align: center;
	padding: var(--base-unit);
}

header.hero {
	position: relative;
	padding: calc(var(--base-unit)*4) var(--base-unit);
	margin: 0;
	width: 100%;
	background: rgba(244, 247, 249, .65);
	border-bottom: 1px solid var(--specter-300);
}

header a,
header h1,
header h2 {
	margin: var(--base-unit) auto;
}

header h2 {
	font-weight: 300;
	max-width: 900px;
}

header.hero input[type="search"] {
	position: absolute;
	bottom: -40px;
	left: 0;
	right: 0;
	margin-left: auto;
	margin-right: auto;
	height: 80px;
	width: 95%;
	max-width: 900px;
	border: 1px solid var(--specter-300);
	border-radius: 80px;
	padding: 0 calc(var(--base-unit)*4);
	background: #fff url("data:image/svg+xml,%3Csvg width='32' height='32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M19.018 17.933a10.789 10.789 0 002.657-7.095C21.675 4.862 16.813 0 10.838 0 4.862 0 0 4.862 0 10.838c0 5.975 4.862 10.837 10.838 10.837 2.712 0 5.193-1.004 7.095-2.657L30.915 32 32 30.915 19.018 17.933zM10.8 20c-5.073 0-9.2-4.127-9.2-9.2 0-5.073 4.127-9.2 9.2-9.2 5.073 0 9.2 4.127 9.2 9.2 0 5.073-4.127 9.2-9.2 9.2z' fill='%232ECC71' fill-rule='nonzero'/%3E%3C/svg%3E") no-repeat 16px center;
	box-shadow: var(--shadow-long);
}

header.hero input[type="search"]:hover,
header.hero input[type="search"]:focus {
	outline: none;
	border: 1px solid var(--emerald);
}

main {
	margin: 0 auto;
	padding: calc(var(--base-unit)*4) var(--base-unit);
	max-width: 900px;
}

footer {
	position: fixed;
	bottom: 0;
	left: 0;
	z-index: 2000;
	display: flex;
	justify-content: space-between;
	width: 100%;
	padding: var(--base-unit);
	background: rgba(244, 247, 249, .65);
	border-top: 1px solid var(--specter-300);
}

/* ---------------------------------------------------
::Businesses
-----------------------------------------------------*/

main.businesses {
	max-width: 1440px;
}

main .business-count {
	text-align: center;
	padding: var(--base-unit);
}

main.businesses > ul {
	padding: 0;
	margin: calc(var(--base-unit)*2) 0;
	list-style: none;
	display: grid;
	grid-gap: var(--base-unit);
	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
	grid-auto-rows: auto;
	grid-gap: calc(var(--base-unit)*2);
	justify-items: center;
}

main.businesses > ul li.card {
	overflow: hidden;
	width: 100%;
	max-width: 600px;
	min-width: 380px;
}

main.businesses > ul li:empty {
	position: relative;
	width: 100%;
	max-width: 600px;
	min-width: 380px;
	height: 300px;
	border-radius: 24px;
	background: var(--specter-100);
	border: 1px solid var(--specter-300);
	box-shadow: 0 var(--base-unit) calc(var(--base-unit)*3) rgba(0, 0, 0, 0.1);
}

main.businesses > ul li:empty:after {
  content: '';
  display: block;
  width: 100%;
  height: 100%;
	border-radius: 24px;
	background: linear-gradient(to right, var(--specter-100) 8%, #f9f9f9 18%, var(--specter-100) 33%);
	animation: skeleton-animation 3s infinite linear;
}

@keyframes skeleton-animation {
	0%{
			background-position: -400px 0
	}
	100%{
			background-position: 400px 0
	}
}

@media ( max-width: 900px ) {

	main.businesses > ul {
		grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));	
	}

	main.businesses > ul li.card {
		min-width: 300px;
	}

}
/* ... */

